--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lt">
 
   <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Sveikinimas">
+    <meta name="author" content="Andrius">
 <META NAME="robots" CONTENT="noindex">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&amp;subset=latin-ext" rel="stylesheet"> 
 
@@ -35,8 +35,8 @@
       <div class="container container-table">
         <div class="row vertical-center-row">
           <div class="col-lg-12 text-center">
-            <h1 class="mt-5"><strong>RASITA</strong></h1>
-            <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente repellat esse, doloremque quod recusandae deleniti nostrum assumenda vel beatae sed aut modi nesciunt porro quisquam voluptatem.</strong></p>
+            <h1 class="mt-5"><strong>RASITA,</strong></h1>
+            <p><strong>Su Šventėmis! Linkiu sėkmingai kilti IŠ ir negrimzti Į bamžaros liūną. Mylek, būk mylima, lengvai atrask energijos įveikti visokias gyvenimo bakterijas, šok, skrisk nepargriūk ir svarbiausia būk laiminga. Turi savo asmeninį kampelį, visada pasiekiamą visam pasaulį. Nustebink save...</strong></p>
           </div>
         </div>
       </div>
